--- a/app/src/main/res/layout/activity_user_authentication.xml
+++ b/app/src/main/res/layout/activity_user_authentication.xml
@@ -32,15 +32,13 @@
         android:id="@+id/buttonLogin"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/teal_200"
         android:layout_below="@+id/editTextPassword"
+        android:layout_centerInParent="true"
         android:layout_marginTop="10dp"
+        android:backgroundTint="@color/teal_200"
         android:onClick="loginButtonClickListener"
-        />
+        android:text="Login"
+        android:textColor="@color/black" />
 
     <LinearLayout
         android:layout_width="match_parent"
