--- a/app/src/main/res/layout/product_recycle_view.xml
+++ b/app/src/main/res/layout/product_recycle_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -7,10 +8,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/product_image_rec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_image" />
+
         <TextView
             android:id="@+id/ProductName_rec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/product_image_rec"
             android:text="ProductName"
             android:textColor="@color/teal_700"
             android:textSize="34sp" />
