--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -141,7 +141,7 @@
         app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName10" />
 
     <Button
-        android:id="@+id/update_button"
+        android:id="@+id/up_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
