--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -105,8 +105,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="27dp"
         android:text="@string/contact_info"
-        app:layout_constraintBottom_toTopOf="@+id/ProductUserName"
-        app:layout_constraintStart_toStartOf="@+id/ProductUserName" />
+        app:layout_constraintBottom_toTopOf="@+id/UpdatePage_userName"
+        app:layout_constraintStart_toStartOf="@+id/UpdatePage_userName" />
 
     <TextView
         android:id="@+id/textView2"
@@ -135,8 +135,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="33dp"
         android:text="@string/name"
-        app:layout_constraintBaseline_toBaselineOf="@+id/ProductUserName"
-        app:layout_constraintEnd_toStartOf="@+id/ProductUserName" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/UpdatePage_userName"
+        app:layout_constraintEnd_toStartOf="@+id/UpdatePage_userName" />
 
     <EditText
         android:id="@+id/ProductUserNumber"
@@ -153,7 +153,7 @@
         tools:ignore="TextContrastCheck" />
 
     <EditText
-        android:id="@+id/ProductUserName"
+        android:id="@+id/UpdatePage_userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
