--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -89,7 +89,7 @@
 
     <TextView
         android:id="@+id/UserLoginName"
-        android:layout_width="122dp"
+        android:layout_width="wrap_content"
         android:layout_height="23dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
