access username and userId in any activity

--- a/app/src/main/res/layout/activity_update_product.xml
+++ b/app/src/main/res/layout/activity_update_product.xml
@@ -194,6 +194,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="-1dp"
             android:visibility="visible"
             app:itemBackground="@color/teal_700"
             app:itemIconTint="@drawable/selector"
@@ -207,7 +208,7 @@
         android:layout_width="50dp"
         android:layout_height="37dp"
         android:layout_marginTop="140dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="12dp"
         app:layout_constraintEnd_toStartOf="@+id/update_img"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />
@@ -216,12 +217,12 @@
         android:id="@+id/del_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/update_img"
+        app:layout_constraintEnd_toEndOf="@+id/up_button"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/up_button"
         app:layout_constraintTop_toBottomOf="@+id/up_button"
         app:srcCompat="@drawable/ic_baseline_delete_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
