--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -7,7 +7,7 @@
     tools:context=".Activities.AddProductActivity">
 
     <ImageView
-        android:id="@+id/add_product_image"
+        android:id="@+id/product_image"
         android:layout_width="0dp"
         android:layout_height="130dp"
         android:layout_marginStart="2dp"
@@ -125,8 +125,8 @@
         android:layout_marginTop="29dp"
         android:text="@string/add_product"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/add_product_image"
-        app:layout_constraintStart_toStartOf="@+id/add_product_image"
+        app:layout_constraintEnd_toEndOf="@+id/product_image"
+        app:layout_constraintStart_toStartOf="@+id/product_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -207,7 +207,7 @@
         android:layout_height="30dp"
         android:layout_marginTop="120dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintEnd_toStartOf="@+id/add_product_image"
+        app:layout_constraintEnd_toStartOf="@+id/product_image"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
