--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -75,7 +75,7 @@
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/pickLocation"
         android:layout_width="252dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="23dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView13"
+        app:layout_constraintBottom_toTopOf="@+id/pickLocation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.273"
         app:layout_constraintStart_toStartOf="parent" />
